Fix footer overlap.

--- a/src/components/Styles/Footer.scss
+++ b/src/components/Styles/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	padding:$margin--small $margin--small/1.5;
 	color:#fff;
-	z-index:2;
+	z-index:1;
 	position:relative;
 	background-color:$dobus--black;
 	&::after {
